--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-builders/custom-webpack": "^13.1.0",
     "@angular/common": "~13.2.2",
     "@angular/core": "~13.2.2",
     "@angular/forms": "~13.2.2",
@@ -21,6 +22,7 @@
     "@angular/router": "~13.2.2",
     "@ionic/angular": "^6.0.0",
     "express": "^4.18.1",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
